--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("./assets/photo_asset_1.jpg");
+    background-image: url("./photo_asset_1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
